{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 36,
  "lineage": "24adf3ec-8f8c-1a29-f31c-86c5e4ea5fe8",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f0eabc7df1c1a04d",
            "arn": "arn:aws:ec2:eu-west-1:961906078703:elastic-ip/eipalloc-0f0eabc7df1c1a04d",
            "domain": "vpc",
            "id": "eipalloc-0f0eabc7df1c1a04d",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-34-242-14-239.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.242.14.239",
            "public_ipv4_pool": "amazon",
            "region": "eu-west-1",
            "tags": {
              "Name": "lesson-5-nat-eip"
            },
            "tags_all": {
              "Name": "lesson-5-nat-eip"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:961906078703:internet-gateway/igw-022addbdeff56e56c",
            "id": "igw-022addbdeff56e56c",
            "owner_id": "961906078703",
            "region": "eu-west-1",
            "tags": {
              "Name": "vpc_terraform-igw"
            },
            "tags_all": {
              "Name": "vpc_terraform-igw"
            },
            "vpc_id": "vpc-02893a4c94fcd1fc0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f0eabc7df1c1a04d",
            "association_id": "eipassoc-0f10d2847ef107f39",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-01ce15e76625e32f1",
            "network_interface_id": "eni-0c22080f9e5901d35",
            "private_ip": "10.0.1.117",
            "public_ip": "34.242.14.239",
            "region": "eu-west-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0dba8fc527ef3d0a5",
            "tags": {
              "Name": "lesson-5-nat-gateway"
            },
            "tags_all": {
              "Name": "lesson-5-nat-gateway"
            },
            "vpc_id": "vpc-02893a4c94fcd1fc0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_to_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0219aab9c48deca041080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-01ce15e76625e32f1",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-west-1",
            "route_table_id": "rtb-0219aab9c48deca04",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "961906078703",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-west-1",
            "route_table_id": "rtb-0219aab9c48deca04"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-022addbdeff56e56c",
            "id": "r-rtb-0c9ab96c62618d3541080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-west-1",
            "route_table_id": "rtb-0c9ab96c62618d354",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "961906078703",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-west-1",
            "route_table_id": "rtb-0c9ab96c62618d354"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:961906078703:route-table/rtb-0219aab9c48deca04",
            "id": "rtb-0219aab9c48deca04",
            "owner_id": "961906078703",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [],
            "tags": {
              "Name": "vpc_terraform-private-rt"
            },
            "tags_all": {
              "Name": "vpc_terraform-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-02893a4c94fcd1fc0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "961906078703",
            "id": "rtb-0219aab9c48deca04",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:961906078703:route-table/rtb-0c9ab96c62618d354",
            "id": "rtb-0c9ab96c62618d354",
            "owner_id": "961906078703",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [],
            "tags": {
              "Name": "vpc_terraform-public-rt"
            },
            "tags_all": {
              "Name": "vpc_terraform-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-02893a4c94fcd1fc0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "961906078703",
            "id": "rtb-0c9ab96c62618d354",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c006e167c527f9a",
            "region": "eu-west-1",
            "route_table_id": "rtb-0219aab9c48deca04",
            "subnet_id": "subnet-084de5b7890dc60c5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09e72141e5cd02581",
            "region": "eu-west-1",
            "route_table_id": "rtb-0219aab9c48deca04",
            "subnet_id": "subnet-011ee6c0b38180030"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-035e84ee794f2b506",
            "region": "eu-west-1",
            "route_table_id": "rtb-0219aab9c48deca04",
            "subnet_id": "subnet-0c684b99a0d089477"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0413a3e9e321a80ff",
            "region": "eu-west-1",
            "route_table_id": "rtb-0c9ab96c62618d354",
            "subnet_id": "subnet-0dba8fc527ef3d0a5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-024e9399f9aebfa15",
            "region": "eu-west-1",
            "route_table_id": "rtb-0c9ab96c62618d354",
            "subnet_id": "subnet-0e61917862edb35cd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-083a9919643de7ba3",
            "region": "eu-west-1",
            "route_table_id": "rtb-0c9ab96c62618d354",
            "subnet_id": "subnet-0479b8f73b78b8d12"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:961906078703:subnet/subnet-084de5b7890dc60c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-084de5b7890dc60c5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "961906078703",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "vpc_terraform-private-subnet-1"
            },
            "tags_all": {
              "Name": "vpc_terraform-private-subnet-1"
            },
            "vpc_id": "vpc-02893a4c94fcd1fc0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "961906078703",
            "id": "subnet-084de5b7890dc60c5",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:961906078703:subnet/subnet-011ee6c0b38180030",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-011ee6c0b38180030",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "961906078703",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "vpc_terraform-private-subnet-2"
            },
            "tags_all": {
              "Name": "vpc_terraform-private-subnet-2"
            },
            "vpc_id": "vpc-02893a4c94fcd1fc0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "961906078703",
            "id": "subnet-011ee6c0b38180030",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:961906078703:subnet/subnet-0c684b99a0d089477",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c684b99a0d089477",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "961906078703",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "vpc_terraform-private-subnet-3"
            },
            "tags_all": {
              "Name": "vpc_terraform-private-subnet-3"
            },
            "vpc_id": "vpc-02893a4c94fcd1fc0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "961906078703",
            "id": "subnet-0c684b99a0d089477",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:961906078703:subnet/subnet-0dba8fc527ef3d0a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dba8fc527ef3d0a5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "961906078703",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "vpc_terraform-public-subnet-1"
            },
            "tags_all": {
              "Name": "vpc_terraform-public-subnet-1"
            },
            "vpc_id": "vpc-02893a4c94fcd1fc0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "961906078703",
            "id": "subnet-0dba8fc527ef3d0a5",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:961906078703:subnet/subnet-0e61917862edb35cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e61917862edb35cd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "961906078703",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "vpc_terraform-public-subnet-2"
            },
            "tags_all": {
              "Name": "vpc_terraform-public-subnet-2"
            },
            "vpc_id": "vpc-02893a4c94fcd1fc0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "961906078703",
            "id": "subnet-0e61917862edb35cd",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:961906078703:subnet/subnet-0479b8f73b78b8d12",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0479b8f73b78b8d12",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "961906078703",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "vpc_terraform-public-subnet-3"
            },
            "tags_all": {
              "Name": "vpc_terraform-public-subnet-3"
            },
            "vpc_id": "vpc-02893a4c94fcd1fc0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "961906078703",
            "id": "subnet-0479b8f73b78b8d12",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:961906078703:vpc/vpc-02893a4c94fcd1fc0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ed79a798c1a61dfa",
            "default_route_table_id": "rtb-0fd552fef7c782eea",
            "default_security_group_id": "sg-0bc1eaf740745bba6",
            "dhcp_options_id": "dopt-059c782b1336c3d80",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02893a4c94fcd1fc0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fd552fef7c782eea",
            "owner_id": "961906078703",
            "region": "eu-west-1",
            "tags": {
              "Name": "vpc_terraform-vpc"
            },
            "tags_all": {
              "Name": "vpc_terraform-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "961906078703",
            "id": "vpc-02893a4c94fcd1fc0",
            "region": "eu-west-1"
          }
        }
      ]
    }
  ]
}